[package]
name = "fann"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
clap = { version = "4.1.6", features = ["derive"] }
lru = "0.9.0"
ndarray = "0.15.6"
polars = { version = "0.27.2", features = ["parquet", "ndarray"] }
rayon = "1.6.1"
serde = { version = "1.0.152", features = ["derive"] }
