[package]
name = "fann"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
blake2 = "0.10.6"
clap = { version = "4.1.6", features = ["derive"] }
dashmap = "5.4.0"
digest = "0.10.6"
flate2 = "1.0.25"
lru = "0.9.0"
ndarray = "0.15.6"
polars = { version = "0.27.2", features = ["parquet", "ndarray"] }
rayon = "1.6.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
zip = { version = "0.6.4", features = ["flate2"] }
